# Job_Application_Autopilot_MCP

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  cli.py  job-application-autopilot-plan.md  pyproject.toml  server.py
reference_resumes/: index.json
src/: __init__.py
src/agents/: __init__.py  apply_agent.py  ats_checker.py  cover_letter_agent.py  diff_viewer.py  job_fetcher.py  platform_agent.py  reference_agent.py  resume_parser.py  resume_profiler.py  tailor_agent.py  tracker_agent.py
src/ats/: __init__.py  formatter_check.py  integrity_check.py  jd_extractor.py  keyword_scorer.py  report.py  resume_extractor.py
src/services/: __init__.py  doc_exporter.py  docling_parser.py  llm.py  scraper.py  session_manager.py
src/storage/: __init__.py  database.py  schema.sql
src/tools/: __init__.py  apply_job.py  ats_check.py  export_resume.py  fetch_job.py  generate_cover_letter.py  parse_resume.py  profile_resume.py  search_jobs.py  tailor_resume.py  track_applications.py
